--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,15 @@ dist.jar=${dist.dir}/Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ConexionDB.jar=C:\\Users\\raulc\\OneDrive\\Documentos\\Aplicaciones\\NetBeen 15\\Librerias\\ConexionDB.jar
 file.reference.mysql-connector-java-5.1.24-bin.jar=C:\\Users\\raulc\\OneDrive\\Documentos\\Aplicaciones\\NetBeen 15\\Librerias\\mysql-connector-java-5.1.24-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.24-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.24-bin.jar}:\
+    ${file.reference.ConexionDB.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
